Added exceptions and important methods in DAO, service